<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestingAgainnnn</string>
    <string name="hello_world">Hello world?</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Register</string>
    <string name="toast_text">Ah here now Ted</string>
   
   <!-- Strings for settings -->
    <string name="battery_settings_title">Battery Settings</string>
    <string name="charging_key">Charging Key</string>
    <string name="charging_title">Charging</string>
    <string name="charging_description_true">Process data while charging</string>
    <string name="charging_description_false">Ignore charging status</string>
    
    <string name="battery_limit_key">Battery limit key</string>
    <string name="battery_limit_title">Battery Limit</string>
    <string name="battery_limit_description">Stop when the battery drops below</string>
    
    <string name="network_key">Network Key</string>
    <string name="network_settings_title">Network</string>
    <string name="network_title">Use</string>
    <string name="network_description_wifi">Wifi only</string>
    <string name="network_description_wfi_data">Wifi and Data</string>
    
    <string name="storage_key">Storage Key</string>
    <string name="storage_settings_title">Data Storage</string>
    <string name="storage_title">Data Storage</string>
    <string name="storage_description">Store data in</string>
    
   
    <string name="email_key">Email Key</string>
    <string name="email_settings_title">Email</string>    
    <string name="change_email_description">Change email</string>
    <string name="anonymous_key">Anonymous</string>
    <string name="anonymous_user_description">Remain anonymous</string>
    <string name="invalid_email_title">Invalid Email</string>
    <string name="invalid_email_text">It looks like that isn\'t a valid email. Please try again.</string>
   

</resources>
