<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Battery Settings -->
    <PreferenceCategory android:title="@string/battery_settings_title" >
        <CheckBoxPreference
            android:key="@string/charging_key"
            android:title="@string/charging_title" 
            android:summaryOn="@string/charging_description_true"
            android:summaryOff="@string/charging_description_false"
            android:defaultValue="true"/>
        
        <ListPreference 
            android:key="@string/battery_limit_key"
            android:title="@string/battery_limit_title"
            android:summary="@string/battery_limit_description"
            android:entries="@array/battery_limits"
            android:entryValues="@array/battery_limit_values"
            android:defaultValue="70"/>        
    </PreferenceCategory>
    
    <!-- Network Settings -->
    <PreferenceCategory android:title="@string/network_settings_title">
        <CheckBoxPreference
            android:key="@string/network_key"
            android:title="@string/network_title"
            android:summaryOn="@string/network_description_wifi"
            android:summaryOff="@string/network_description_wfi_data"
            android:defaultValue="true"/>
    </PreferenceCategory>
    
    <!-- Storage settings -->
   <ListPreference 
            android:key="@string/storage_key"
            android:title="@string/storage_title"
            android:summary="@string/storage_description"
            android:entries="@array/storage_options"
            android:entryValues="@array/storage_options"
            android:defaultValue="Internal Memory"/>
   
   <!-- Email Settings -->
   <PreferenceCategory android:title="@string/email_settings_title" >
       <EditTextPreference
           android:key="@string/email_key"
           android:summary="@string/change_email_description"            
           android:dialogTitle=""/>
       <CheckBoxPreference 
           android:key="@string/anonymous_key"
           android:summary="@string/anonymous_user_description"
           android:defaultValue="true"/>      
   </PreferenceCategory>
    
    
    
    

</PreferenceScreen>